@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.57 2003/12/11 11:07:29 vouchcac Exp $
+ * $Id: ChangeLog,v 1.58 2004/03/19 12:41:13 vouchcac Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-22 12:45 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
+  * _winclpb.c
+    * SetClipboardData()/GetClipBoardData() now accept/returns ANY format alongwith text and bitmaps.
+      Thanks Andrew Wos.
 
 2004-03-19 18:30 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
   * _winclpbp.c
